--- a/diffusion/pyproject.toml
+++ b/diffusion/pyproject.toml
@@ -1,7 +1,14 @@
 [project]
-name = "diffusion"
+name = "car-diffusion"
 version = "0.1.0"
-description = "Add your description here"
+description = "Diffusion model for car image generation using PyTorch"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "matplotlib>=3.10.7",
+    "opencv-python>=4.12.0.88",
+    "pyyaml>=6.0.3",
+    "torch>=2.9.0",
+    "torchvision>=0.24.0",
+    "tqdm>=4.67.1",
+]
