--- a/diffusion/pyproject.toml
+++ b/diffusion/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pillow>=12.0.0",
     "pyyaml>=6.0.3",
     "requests>=2.32.5",
+    "scikit-learn>=1.7.2",
     "scipy>=1.16.2",
     "torch>=2.9.0",
     "torchvision>=0.24.0",
